<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".userprofile.UserProfileActivity"
    android:background="@drawable/instagram_backgroung_wallpaper">

    <RelativeLayout
        android:id="@+id/userLayout1"
        android:layout_width="match_parent"
        android:layout_height="241dp">

        <ImageView
            android:id="@+id/userProfileImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:src="@drawable/add_post_image_2" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="305dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLayout1">

        <EditText
            android:id="@+id/userProfileName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border_edittext"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:textColorHint="#ffffff"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/userProfileStatus"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_edittext"
            android:ems="10"
            android:hint="@string/status"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:textColorHint="#ffffff"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/saveProfile"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_buttons"
            android:text="@string/save_profile"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>