<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/instagram_backgroung_wallpaper"
    tools:context=".RegisterUserActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:background="@drawable/instagram_title_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="360dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/border_edittext"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/border_edittext"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColorHint="#ffffff"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_buttons"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>